// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Print card render tests renders the bottom sheet print card, not visible 1`] = `null`;

exports[`Print card render tests renders the bottom sheet print card, visible, manager and non manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="print card"
/>
`;

exports[`Remove card render tests renders the bottom sheet add card, not visible 1`] = `null`;

exports[`Remove card render tests renders the bottom sheet add card, visible, manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;

exports[`Remove card render tests renders the bottom sheet add card, visible, non manager option 1`] = `
<BottomSheetBaseCard
  image=""
  onPress={[Function]}
  text="hello"
/>
`;
